Blarggr WIP -home page and blarg details

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
     />
-    <title>Bloggr</title>
+    <title>Blarggr</title>
   </head>
   <body>
     <noscript>
