--- a/public/index.html
+++ b/public/index.html
@@ -9,9 +9,13 @@
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Merriweather&display=swap"
+      rel="stylesheet"
+    />
     <title>Blarggr</title>
   </head>
-  <body>
+  <body style="font-family: 'Merriweather', serif;">
     <noscript>
       <strong
         >We're sorry but Bloggr doesn't work properly without JavaScript
